list(APPEND flags "-DEXAMPLE5")
list(APPEND flags1 "-DEXAMPLE1")
add_executable(avl main-avl.cpp avl.cpp "${PROJECT_SOURCE_DIR}/include/avl.h")
add_executable(heap main-heap.cpp "${PROJECT_SOURCE_DIR}/include/heap.h" "${PROJECT_SOURCE_DIR}/include/Test.h")
add_executable(heap1 main-heap.cpp "${PROJECT_SOURCE_DIR}/include/heap.h" "${PROJECT_SOURCE_DIR}/include/Test.h")
add_executable(bst main-bst.cpp "${PROJECT_SOURCE_DIR}/include/bst.h")

target_include_directories(avl PUBLIC "${PROJECT_SOURCE_DIR}/include")
target_include_directories(bst PUBLIC "${PROJECT_SOURCE_DIR}/include")
target_include_directories(heap PUBLIC "${PROJECT_SOURCE_DIR}/include")
target_compile_options(heap PRIVATE ${flags})
target_compile_options(heap1 PRIVATE ${flags1})
